--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,6 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
-  -webkit-transform: translate3d(0, 0, 0);
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
 
@@ -39,14 +38,6 @@ body {
   justify-content: center;
   background-color: #ffbfd1;
 }
-
-// section ::before {
-//   content: "";
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-// }
 
 .para-title {
   position: absolute;
@@ -78,7 +69,6 @@ body {
 }
 
 .roi {
-  border: red solid 2px;
   position: relative;
   padding-bottom: 30px;
   display: flex;
@@ -108,7 +98,6 @@ body {
 }
 
 .ysa {
-  border: red solid 2px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -132,12 +121,12 @@ body {
 }
 
 .epee {
-  border: red solid 2px;
   position: relative;
   display: flex;
   justify-content: center;
   height: 50vw;
   overflow: hidden;
+  padding-bottom: 700px;
 }
 
 .para-epee {
@@ -148,6 +137,40 @@ body {
   overflow: hidden;
   width: 100%;
   transform: translate3d(0, 0, 0);
+}
+
+.h-100 {
+  height: 100vh;
+}
+
+/* slider mask */
+.slider-mask {
+  border: 5px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+/* slider track */
+.slider-track {
+  height: 100vh;
+  display: inline-flex;
+  border: 5px solid red;
+  border-radius: 5px;
+}
+
+/* slider item (screen) */
+.slider-track .screen {
+  width: calc(100vw);
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid blue;
+  background-color: white;
+}
+
+.screen img {
+  height: 100vh;
 }
 
 a {
