--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,12 +2,17 @@
 // css variables
 // ==================================== */
 @import "bootstrap/scss/bootstrap-grid";
-
-:root {
+@font-face {
+  font-family: "Katari";
+  src: url("../fonts/Katari.woff") format("woff");
+}
+@font-face {
+  font-family: "Harbour";
+  src: url("../fonts/Harbour\ Regular.woff") format("woff");
 }
 
 /* ====================================
-// reset rules
+// rules
 // ==================================== */
 
 * {
@@ -47,6 +52,8 @@ body {
   object-fit: cover;
   overflow: hidden;
   transform: translate3d(0, 0, 0);
+  content-visibility: auto;
+  contain-intrinsic-size: 1000px;
 }
 
 .para-title-logo {
@@ -160,17 +167,79 @@ body {
 
 /* slider item (screen) */
 .slider-track .screen {
-  width: calc(100vw);
+  width: calc(150vw - 30px);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 5px solid blue;
+  // border: 5px solid blue;
   background-color: white;
 }
 
-.screen img {
+.screen-bg {
   height: 100vh;
+}
+
+.slider-track .screen-2 {
+  width: calc(150vw - 30px);
+}
+
+.buy-container {
+  height: 100vh;
+}
+
+.buy-logo {
+  height: 20%;
+  margin-top: 360px;
+  padding-bottom: 30px;
+}
+
+.buy-title {
+  color: white;
+  font-size: 22px;
+  padding-bottom: 18px;
+  font-family: Harbour;
+}
+
+.buy-txt {
+  color: white;
+  font-size: 18px;
+  padding-bottom: 50px;
+  font-family: Katari;
+}
+
+.buy-button {
+  color: white;
+  padding: 12px 22px;
+  border: white solid 1px;
+  font-size: 22px;
+  text-decoration: none;
+  font-family: Harbour;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.buy-button:hover {
+  background-color: white;
+  color: black;
+}
+
+.buy-livre {
+  margin-top: 150px;
+}
+
+.footer-logo {
+  height: 25%;
+  padding-bottom: 40px;
+  padding-top: 70px;
+}
+
+.footer-links {
+  font-family: Katari;
+  font-size: 20px;
+  color: #404040;
+  display: block;
+  text-decoration: none;
 }
 
 a {
@@ -183,7 +252,3 @@ video {
   block-size: auto;
   vertical-align: middle;
 }
-
-/* ====================================
-// base rules
-// ==================================== */
