--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -161,27 +161,148 @@ body {
 .slider-track {
   height: 100vh;
   display: inline-flex;
-  border: 5px solid red;
   border-radius: 5px;
 }
 
 /* slider item (screen) */
-.slider-track .screen {
+.slider-track .screen-1 {
   width: calc(150vw - 30px);
   box-sizing: border-box;
   display: flex;
-  justify-content: center;
   align-items: center;
   // border: 5px solid blue;
   background-color: white;
-}
-
-.screen-bg {
-  height: 100vh;
+  object-fit: fill;
 }
 
 .slider-track .screen-2 {
+  width: calc(190vw - 30px);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  // border: 5px solid blue;
+  background-color: white;
+  object-fit: fill;
+}
+
+.slider-track .screen-3 {
+  width: calc(190vw - 30px);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  // border: 5px solid blue;
+  background-color: white;
+  object-fit: fill;
+}
+
+.slider-track .screen-4 {
   width: calc(150vw - 30px);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  // border: 5px solid blue;
+  background-color: white;
+  object-fit: fill;
+}
+
+.screen-bg {
+  object-fit: cover;
+  z-index: 0;
+}
+
+.screen-1 .chara-ysa {
+  position: absolute;
+  height: 120vh;
+}
+
+.screen-1 .ysa-spacer {
+  left: 10%;
+  z-index: 7;
+}
+
+.screen-1 .ysa-tree-l {
+  left: 0;
+  z-index: 5;
+}
+
+.screen-1 .ysa-horse {
+  left: 1%;
+  height: 90vh;
+  bottom: 0;
+  z-index: 8;
+}
+
+.screen-2 .chara-roi {
+  position: absolute;
+  height: 100vh;
+}
+
+.screen-2 .roi-castle {
+  left: 19%;
+  z-index: 4;
+}
+
+.screen-2 .roi-portail {
+  left: 23%;
+  z-index: 3;
+  top: -1%;
+}
+
+.screen-2 .roi-mad {
+  left: 22.3%;
+  z-index: 5;
+  height: 64vh;
+  bottom: 0;
+}
+
+.screen-2 .roi-spacer {
+  z-index: 6;
+  left: 39%;
+}
+
+.screen-3 .chara-baron {
+  position: absolute;
+  height: 100vh;
+}
+
+.screen-3 .baron-claude {
+  height: 90vh;
+  left: 52%;
+  bottom: 0;
+}
+
+.screen-3 .baron-ville {
+  left: 44%;
+  width: 25%;
+}
+
+.screen-3 .baron-mad {
+  height: 90vh;
+  bottom: 0;
+  left: 48%;
+  z-index: 5;
+}
+
+.screen-4 .chara-epee {
+  position: absolute;
+  height: 100vh;
+}
+
+.screen-4 .epee-spacer {
+  left: 64%;
+  z-index: 10;
+}
+
+.screen-4 .epee-mad {
+  left: 70%;
+  height: 100vh;
+  z-index: 9;
+}
+
+.screen-4 .epee-portail {
+  left: 69%;
+  height: 100vh;
+  z-index: 8;
 }
 
 .buy-container {
